--- a/assets/css/base/main.css
+++ b/assets/css/base/main.css
@@ -170,7 +170,7 @@ a:after {
     height: 34px;
     padding: 13px 18px;
     font-size: 20px;
-    line-height: 1.428571429;
+    line-height: .8;
     color: #333;
     vertical-align: middle;
     background-color: #ddd;
